29 Nov 2011: Wouter
	- Fix bug where no IPv6 causes wrong test results, notably SSL, due
	  to the error report code.

13 Nov 2011: Wouter
	- control unsafe shows the dialog popup again.

9 Nov 2011: Wouter
	- Fix that if network down (nothing pings) then it picks disconnect,
	  for slow bootup where the machine has the previous network settings.

8 Nov 2011: Wouter
	- the test_tcp and test_ssl command do not have the 20-sec tcpretry
	  once timer, so that the test can try unbound.
	- config for new open resolver (port 80 TCP, port 443 SSL).  No more
	  probe plain tcp on port 443.

7 Nov 2011: Wouter
	- fixed the OSX installer problem, launchd does not load userspace
	  agents without hacks, and has side-effects that enables boot-start.
	- more detailed logging at verbosity 4 (prints wire and dig output).

4 Nov 2011: Wouter
	- on OSX update config if old (no ssl443).
	- on OSX install config file before attempting to modify it.

3 Nov 2011: Wouter
	- remove error dialog at end of osx install.

2 Nov 2011: Wouter
	- check ssl fingerprint of servers.
	- remind user on make install about ssl443.

1 Nov 2011: Wouter
	- probe ssl servers (nlnetlabs default server configured).

31 Oct 2011: Wouter
	- do not log errors for unclean ssl close.

28 Oct 2011: Wouter
	- documentation fixes
	- osx dmg install fix for 10.6 packager (start of userspace panel).
	  also framework for debug logging in postflight of packager.
	  10.6 packages work on 10.7.  10.7 packages work on 10.7.
	- tag 0.7
	- trunk is 0.8 under development.
	- macinstall, launch unbound-anchor at boot (update if offline months)
	- echo in Makefile and newline if no probe performed.

27 Oct 2011: Wouter
	- osx dmg install and uninstall works.
	- for caches, also test if NSEC3 is present for QTYPE=NULL nodata.

26 Oct 2011: Wouter
	- uninstall command for OSX (put in the DMG).

25 Oct 2011: Wouter
	- fix echo at end of make install.
	- osx makepackage, donated by Carsten Strotmann.

22 Oct 2011: Wouter